Testing new weak_modules_add function